Commit from Dualite Alpha:

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <meta property="og:title" content="EpicTrack - Prédiction d'Épidémies Infantiles au Cameroun" />
     <meta property="og:description" content="EpicTrack utilise l'intelligence artificielle pour prédire avec précision les maladies infantiles au Cameroun. Consultations médicales en ligne, rapports détaillés et prévention personnalisée." />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://epictrack-cameroun.com" />
-    <meta property="og:image" content="https://images.unsplash.com/photo-1559757148-5c350d0d3c56?ixlib=rb-4.0.3" />
+    <meta property="og:url" content="https://piktrackapp-1zlb-alphaproject.netlify.app" />
+    <meta property="og:image" content="https://d33wubrfki0l68.cloudfront.net/68c8c72f617bd7c540eb86cb/screenshot_2025-09-16-02-11-54-0000.webp" />
     <meta property="og:image:width" content="960" />
     <meta property="og:image:height" content="600" />	
     <meta property="og:image:alt" content="Application EpicTrack pour la santé infantile au Cameroun" />
@@ -21,9 +21,9 @@
     <meta name="twitter:title" content="EpicTrack - Prédiction d'Épidémies Infantiles au Cameroun" />
     <meta name="twitter:description" content="EpicTrack utilise l'intelligence artificielle pour prédire avec précision les maladies infantiles au Cameroun. Consultations médicales en ligne, rapports détaillés et prévention personnalisée." />
     <meta name="twitter:site" content="@epictrack_cm" />
-    <meta name="twitter:image" content="https://images.unsplash.com/photo-1559757148-5c350d0d3c56?ixlib=rb-4.0.3" />
+    <meta name="twitter:image" content="https://d33wubrfki0l68.cloudfront.net/68c8c72f617bd7c540eb86cb/screenshot_2025-09-16-02-11-54-0000.webp" />
 
-    <link rel="canonical" href="https://epictrack-cameroun.com" />
+    <link rel="canonical" href="https://piktrackapp-1zlb-alphaproject.netlify.app" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
@@ -33,7 +33,7 @@
       "@context": "https://schema.org",
       "@type": "WebSite",
       "name": "EpicTrack Cameroun",
-      "url": "https://epictrack-cameroun.com",
+      "url": "https://piktrackapp-1zlb-alphaproject.netlify.app",
       "description": "EpicTrack utilise l'intelligence artificielle pour prédire avec précision les maladies infantiles au Cameroun. Consultations médicales en ligne, rapports détaillés et prévention personnalisée.",
       "publisher": {
         "@type": "Organization",
